# Claude-Rasp

./: Architecture.md  PRD.md  PlanDeTravail.md  ProgressTracker.md  instructions.md  scripts-guide.md
code/: .gitignore  README.md
code/backend/: .env.example  .flake8  pyproject.toml  requirements-dev.txt  requirements.txt
code/backend/app/: main.py
code/backend/app/api/v1/: auth.py
code/backend/app/api/v1/test/: __init__.py  routes.py
code/backend/app/core/: config.py  security.py
code/backend/app/db/: init_db.py  session.py  setup_db.py
code/backend/app/models/: __init__.py  conversation.py  usage.py  user.py
code/backend/app/schemas/: __init__.py  token.py  user.py
code/backend/app/services/: user.py
code/config/: mcp_config.yaml  nginx.conf
code/config/systemd/: claude-rasp-backend.service
code/docs/: api_specifications.md  authentication_flow.md  data_models.md  ui_mockups.md
code/frontend/: .env.example  .eslintrc.js  package.json  vue.config.js
code/frontend/public/: index.html
code/frontend/src/: App.vue  main.js
code/frontend/src/router/: index.js
code/frontend/src/views/: Conversation.vue  Conversations.vue  Home.vue  Login.vue  Monitoring.vue  Settings.vue
code/scripts/: backup.sh  deploy.sh  deploy_backend.sh  deploy_frontend.sh  install.sh  setup_permissions.sh
tests/: .env.test.example  README.md  __init__.py  config.py  requirements-test.txt  run_api_tests.py  simple_auth_test.py  test_auth_direct.py
tests/api/: __init__.py  api_client.py  test_auth.py
